--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "firebase": "^9.8.1",
     "prop-types": "^15.8.1",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "react-router-dom": "^6.3.0"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.18.0",
